--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/matt-bernhardt/learnbackstop/issues"
   },
-  "homepage": "https://github.com/matt-bernhardt/learnbackstop"
+  "homepage": "https://github.com/matt-bernhardt/learnbackstop",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-backstop": "^0.1.5",
+    "grunt-contrib-uglify": "^0.9.1"
+  }
 }
